--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/postsRecyclerView">
-
-    </android.support.v7.widget.RecyclerView>
-
+        android:id="@+id/postsRecyclerView"/>
 </LinearLayout>
 
 
