--- a/app/src/main/res/layout/posts_contents_row.xml
+++ b/app/src/main/res/layout/posts_contents_row.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <variable name="obj" type="com.example.geniusplaza.sample.POJO.Posts" />
+    </data>
+
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,6 +14,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/row_id"/>
+        android:id="@{String.valueOf(obj.id)}"/>
 
 </LinearLayout>
+</layout>
